<resources>
    <string name="app_name">GP</string>

    //VillageActivity
    <string name="village_activity_toolbar_title">GramPanchayat</string>
    <string name="village_progress_dialog">Loading</string>

    //Village Menu
    <string name="menu_village_adopted">GramPanchayat Adopted</string>
    <string name="menu_village_setting">User Info</string>
    <string name="menu_village_logout">LogOut</string>

    //Activity sign layout Strings
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_button">Sign In</string>
    <string name="login_no_account">Don\'t have an account ?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_name_hint">Name</string>

    //Login Actvity Strings
    <string name="sign_in_enter_the_email">Enter the email</string>
    <string name="sign_in_enter_the_password">Enter the password</string>
    <string name="sign_in_login_successfully">Login In Successfully</string>
    <string name="sign_in_login_failed">Login Failed</string>
    <string name="sign_in_message_dialog">Login .....</string>
    <string name="sign_in_enter_the_name">Enter the Name</string>
    <string name="sign_up_message_dialog">Registering User .....</string>
    <string name="sign_up_register_successful">Registerd Successful</string>
    <string name="sign_up_registration_failed">Cannot Register</string>

    //UserWork
    //UserInfo
    <string name="user_info_village_adoption">No. Of GramPanchayat Adopted</string>
    <string name="user_info_display_name">Name</string>
    <string name="user_info_display_email">Email</string>
    <string name="user_info_toast_error">Loading Failed</string>

    //VillageAdoptionActivity
    <string name="village_adoption_toolbar_tiltle">Village Adopted</string>

    //Intro Screen
    <string name="intro_screen_title_1"> Need To Adopt Gram Panchayat </string>
    <string name="intro_screen_title_2"> Awareness </string>
    <string name="intro_screen_title_3"> Suggestive Measures </string>
    <string name="intro_screen_dec_1">Development of backward areas is essential for the upliftment of the country as still 70% of population is rural in India</string>
    <string name="intro_screen_dec_2">Development index prioritizes the evolution of backward panchayats</string>
    <string name="intro_screen_dec_3">Amendments are to be made for amenities on which development of panchayat depends</string>

    //OnBoardingActivity
    <string name="on_boarding_next">NEXT</string>
    <string name="on_boarding_skip">SKIP</string>
    <string name="on_boarding_start">GOT IT</string>

    //Village Details Activity
    <string name="village_detail_name">GramPanchayat Name</string>


    //Index For Sorting
    <string name="over_all_index">Over All</string>
    <string name="education_index">Education</string>
    <string name="health_index">Health</string>
    <string name="sanitation_index">Sanitation</string>
    <string name="literacy_index">Literacy</string>
    <string name="water_index">Water</string>
    <string name="waste_land_index">Waste Land Reclamation</string>
    <string name="agriculture_land_index">Agriculture</string>
    <string name="drainage_index">Drainage</string>
    <string name="built_up_index">InfraStructure</string>


</resources>
