<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.grampanchyatbeta.Login.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:id="@+id/sign_up_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/chat_structure_profile" />
        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/login_name_hint"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/login_email_hint"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackground"
            android:drawableLeft="@drawable/ic_lock_outline_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/login_password_hint"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorButton"
            android:text="@string/login_sign_up"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
