<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_info_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/user_info_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/chat_structure_profile" />

    <TextView
        android:id="@+id/user_info_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_info_profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_info_display_name"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_info_display_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user_info_display_name"
        android:layout_marginTop="27dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_info_display_email"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_info_village_adopted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_village_adoption"
        android:textSize="25dp"
        android:layout_below="@+id/user_info_display_email"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>